L7-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: frontend-viewer
  namespace: bank-of-ambient
spec:
  targetRefs:
  - kind: Service
    group: ""
    name: frontend
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/bank-of-ambient/sa/sleep
    to:
    - operation:
        # Allows sleep to only send GET requests to frontend
        # but perform no other operations 
        methods: ["GET"]
